<resources>
    <string name="app_name">Location-Tracker</string>
    <string name="teacher_s_login">Faculty Login</string>
    <string name="student_login">Student Login</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="activity_login">Login Activity</string>
    <string name="email">Email</string>
    <string name="password">Password*</string>
    <string name="fpwd">Forgot Password?</string>
    <string name="login">Log In</string>
    <string name="signup">Not a member? Sign up</string>
    <string name="name">Name*</string>
    <string name="department">Department/Subject/Field</string>
    <string name="signupp">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="otherloginoptions">Other Login Options</string>
    <string name="messages">Messages</string>
    <string name="connections">My Connections</string>
    <string name="requests">Requests</string>
    <string name="enter_message">Enter Message</string>
    <string name="title_activity_maps">Map</string>
    <string name="location">Show Student\'s Location</string>
    <string name="tools">Tools</string>
    <string name="error_getting_distance">Error! Getting Distance!</string>
    <string name="connected_students">Connected Students</string>
    <string name="employee_id">Employee ID</string>
    <string name="enrollment_number">Enrollment Number</string>
    <string name="verify_your_email">Verify your Credentials!</string>
    <string name="ok">OK</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="enter_your_email_amp_tap_on_ok_button"><![CDATA[Enter your Email & tap on \'OK\' button:]]></string>
    <string name="choose_profile_picture">Choose Profile Picture</string>
    <string name="id_number">College/School Unique ID Number*</string>
    <string name="college_school">College/School</string>
    <string name="phone_number">Phone Number with ISD code</string>
    <string name="you_can_sign_up_via_email_or_phone_number_or_both">You can sign up via Email or Phone Number.</string>
    <string name="login_via_phone_number">Login via Phone Number</string>
    <string name="loading_please_wait">Loading.. Please Wait!</string>
    <string name="delete_account">Delete Account</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="settings">Settings</string>
    <string name="google_maps_key"></string>
</resources>
