<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/connections"
            android:icon="@drawable/ic_friends_nav"
            android:title="@string/connections" />
        <item
            android:id="@+id/messages"
            android:icon="@drawable/ic_nav_message"
            android:title="@string/messages" />
        <item
            android:id="@+id/requests"
            android:icon="@drawable/ic_nav_achievements"
            android:title="@string/requests" />
        <item
            android:id="@+id/tools"
            android:icon="@drawable/ic_nav_settings"
            android:title="@string/tools" />
        <item
            android:id="@+id/signout"
            android:icon="@drawable/ic_logout"
            android:title="@string/sign_out" />

    </group>

</menu>
