<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageViewFP"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:baselineAligned="true"
        android:fitsSystemWindows="true"
        android:layout_weight="1"
        android:paddingVertical="64dp"
        app:srcCompat="@drawable/location"
        tools:ignore="ContentDescription"
        android:layout_height="0dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/new_rocker"
        android:layout_marginVertical="8dp"
        android:padding="@dimen/dimen_8x"
        android:text="@string/forgot_your_password"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textverify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/almendra_display"
        android:paddingLeft="@dimen/dimen_16x"
        android:paddingRight="@dimen/dimen_16x"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:text="@string/enter_your_email_amp_tap_on_ok_button"
        android:textSize="24sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="8dp"
        android:paddingLeft="@dimen/dimen_16x"
        android:paddingRight="@dimen/dimen_16x"
        app:passwordToggleEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailsforgotpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorLink="@color/colorBackground" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/okforgotbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_32x"
        android:layout_marginLeft="@dimen/dimen_16x"
        android:layout_marginTop="@dimen/dimen_16x"
        android:layout_marginEnd="@dimen/dimen_32x"
        android:layout_marginRight="@dimen/dimen_32x"
        android:layout_marginBottom="@dimen/dimen_4x"
        android:background="@color/colorPrimary"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/ok"
        android:textColor="@color/white"
        tools:targetApi="m" />


    <Button
        android:id="@+id/buttoncancelforgotpassword"
        android:layout_width="match_parent"
        android:layout_marginVertical="4dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_4x"
        android:text="Cancel" />


</LinearLayout>
</androidx.core.widget.NestedScrollView>
