<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="ClickHandlers"
            type="com.sg.hackamu.view.LauncherActivity.LauncherActivityClickHandlers"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/launcher"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="78dp"
            android:layout_height="8dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            app:srcCompat="@mipmap/icon"
            tools:ignore="contentDescription" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="174dp"
            android:layout_gravity="center"
            android:fontFamily="cursive"
            android:padding="@dimen/dimen_4x"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="48sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="78dp"
            android:layout_height="8dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/ic_dialog_map"
            tools:ignore="contentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:paddingTop="@dimen/dimen_16x"
            android:paddingStart="@dimen/text_24x"
            android:paddingEnd="@dimen/text_24x">

            <Button
                android:id="@+id/loginfaculy"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:clickable="true"
                android:elevation="8dp"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:onClick="@{ClickHandlers::onFacultyButtonClicked}"
                android:stateListAnimator="@null"
                android:text="@string/teacher_s_login"
                android:textStyle="bold"
                tools:targetApi="m" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/dimen_16x"
            android:paddingStart="@dimen/text_24x"
            android:paddingEnd="@dimen/text_24x">

            <Button
                android:id="@+id/loginstudent"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:clickable="true"
                android:elevation="8dp"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:onClick="@{ClickHandlers::onStudentButtonClicked}"
                android:stateListAnimator="@null"
                android:text="@string/student_login"
                android:textStyle="bold"
                tools:targetApi="m" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_4x"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="Made with "
                android:textColor="@color/gradient_4_start"
                android:textSize="@dimen/text_16x" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_heart_on"
                tools:ignore="contentDescription" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/trade_winds"
                android:text=" By Saarthak Gupta "
                android:textColor="@color/gradient_4_start"
                android:textSize="@dimen/text_16x" />

        </LinearLayout>

    </LinearLayout>
</layout>